2007-08-14  Lluis Sanchez Gual <lluis@novell.com> 

	* ChangeLogAddIn.mdp, gtk-gui/gui.stetic, Makefile.am: Updated.
	* ChangeLogService.cs: Fix nullref exception.
	* CommitDialogExtensionWidget.cs: Fix warning.

2007-08-09  Lluis Sanchez Gual <lluis@novell.com> 

	* ChangeLogAddIn.addin.xml, ChangeLogAddIn.mdp, Makefile.am: Reorganized the
	  extension point hierarchy. Embedded all add-in manifests as resources.

2007-08-06  Levi Bard <taktaktaktaktaktaktaktaktaktak@gmail.com>

	* ChangeLogAddin.cs: Fixed #82322. 

2007-08-02  Lluis Sanchez Gual <lluis@novell.com> 

	* gtk-gui/MonoDevelop.ChangeLogAddIn.ProjectOptionPanelWidget.cs: Added
	  missing file.

2007-08-02  Lluis Sanchez Gual <lluis@novell.com> 

	* ProjectOptionPanel.cs, ChangeLogData.cs, ProjectOptionPanelWidget.cs,
	  ChangeLogAddInOptionsPanel.cs, ChangeLogAddIn.cs, AddLogEntryDialog.cs,
	  ChangeLogAddIn.addin.xml, ChangeLogAddIn.mdp, gtk-gui/generated.cs,
	  gtk-gui/MonoDevelop.ChangeLogAddIn.AddLogEntryDialog.cs,
	  gtk-gui/gui.stetic, ChangeLogAddInOptionPanelWidget.cs, Makefile.am,
	  ChangeLogService.cs, CommitDialogExtensionWidget.cs: Allow updating
	  multiple changelog files at the same time. Updated licenses. Based on a
	  patch by Jacob Ilsø Christensen.

2007-07-03  Mike Krüger <mkrueger@novell.com> 

	* ChangeLogAddIn.cs: Changed a bit because of the removal of custom
	  collections in the Ide project.

2007-06-22  Jacob Ilsø Christensen <jacobilsoe@gmail.com> 

	* ChangeLogAddIn.mdp: Included ChangeLog file.

2007-05-09  Lluis Sanchez Gual <lluis@novell.com> 

	* ChangeLogAddIn.mdp, Makefile.am: Reference shared assemblies from the
	  correct location.

2007-05-04  Lluis Sanchez Gual <lluis@novell.com> 

	* ChangeLogAddIn.addin.xml, ChangeLogAddIn.mdp,
	  gtk-gui/MonoDevelop.ChangeLogAddIn.AddLogEntryDialog.cs,
	  gtk-gui/gui.stetic, Makefile.am: Migration to Mono.Addins.

2007-03-02  Lluis Sanchez Gual <lluis@novell.com> 
